
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Improve parser efficiency by returning results of nested tags if elementOutput is null|false
- [#5392] Fix bug where policy template descriptions were not translated
- [#5377] Fix modParser->isProcessingTag() bug preventing filtering on placeholder tags
- Pass content by reference to OnParseDocument event
- Add message_key and json message_format option to system/registry/register/send processor
- Allow raw messages to be returned from system/registry/register/read processor
- Add include_keys option to modRegister implementations
- [#5336] Prefix non-core actions in the MODx.action JS object with their namespace
- Avoid setting description to null in element/propertyset/create processor
- Improve modX->logManagerAction to avoid attempts to insert NULL values
- Accept null options in modHashing->__construct()
- [#4607], [#3463] Add rank field for contexts to allow custom sorting in tree, fix issues with context/resource dragging and dropping and ensure context name validation rules are consistent
- Improve UI of User's groups to allow for assigning ranks to User Groups for a User
- Add Custom Dashboards and Dashboard Widgets
- [#4871] Fix Access Permissions not being copied when duplicating a context
- [#4382] Forgot Manager Password now lookups using username to prevent issues when the 'allow_multiple_emails' system setting is enabled
- Fix rendering of combo boxes in element properties
- Add ability to select Primary User Group for User
- [#4637] Fix RTE checkbox not saving correctly when using Quick Create Resource
- [#5268] Add search toolbar for Resource tree
- [#4080] Add Content Type and Content Disposition to Quick Create/Update Resource
- [#5250] Add check for cURL in Package Management
- [#5204] Add search by parent to mgr search page